# uRing

./: .gitignore  README.md
Crawler/: .gitignore  Cargo.toml  README.md
Crawler/data/: config.toml  locale.toml  siteMap.json
Crawler/infra/: AWS.tf
Crawler/src/: config.rs  error.rs  handler.rs  lambda.rs  locale.rs  main.rs  utils.rs
Crawler/src/lambda/: mod.rs
Crawler/src/models/: campus.rs  config.rs  crawler.rs  mod.rs  notice.rs  seed.rs  selectors.rs
Crawler/src/services/: boards.rs  crawling.rs  departments.rs  mod.rs  notices.rs  selectors.rs
Crawler/src/storage/: mod.rs  s3.rs
Crawler/src/utils/: fs.rs  fs_utils.rs  http.rs  log.rs  mod.rs  text_utils.rs  url.rs
Mapper/: .gitignore  README.md  get_useful_boards.py  get_yonsei_departments.py
Mapper/src/: __init__.py  config.py  main.py
Mapper/src/crawlers/: __init__.py  boards.py  departments.py
Mapper/src/utils/: __init__.py  http.py  selectors.py
Viewer/: .gitignore  package-lock.json
Viewer/app/: page.tsx
Viewer/lib/: api.ts
Viewer/public/data/: resp1.json  resp2.json  resp3.json  resp4.json  resp5.json  resp6.json
Viewer/scripts/: sync-crawler-data.js
Viewer/src/app/: globals.css  page.tsx
Viewer/src/core/lib/: api.ts
