[package]
name = "crawler"
version = "0.1.0"

# Use the latest stable edition
edition = "2021"

[dependencies]
# For asynchronous programming
tokio = { version = "1", features = ["full"] }

# For making HTTP requests
reqwest = { version = "0.12", features = ["json"] }

# For CLI arguments
clap = { version = "4", features = ["derive"] }

# For parsing HTML
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# For web scraping
scraper = "0.22"

# For URL manipulation
url = "2.5"

# For configuration
toml = "0.8"

# For concurrent stream processing
futures = "0.3"

# For async traits
async-trait = "0.1"

# For logging
log = "0.4"
env_logger = "0.11"
