[package]
name = "crawler"
version = "0.1.0"
description = "Crawls Yonsei University website to discover announcement boards"

# Set Rust edition to 2024
edition = "2024"

[dependencies]
# Asynchronous runtime
tokio = { version = "^1", features = ["rt-multi-thread", "macros", "time"] }

# Http Client
reqwest = { version = "^0.12", default-features = false, features = [
    "rustls-tls",
    "blocking",
] }

# Command line argument parsing
clap = { version = "^4", features = ["derive"] }

# For serialization and deserialization
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"

# HTML parsing
scraper = "^0.22"

# URL manipulation
url = "^2.5"

# TOML parsing
toml = "^0.8"

# Asynchronous utilities
futures = "^0.3"

# Error handling
thiserror = "^2.0"

# Regular expressions
regex = "^1.1"

[dev-dependencies]
tempfile = "3.24.0"
